--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-architect
+tittle:welcome to gary's website!
+description:Feel free to bookmark this to keep an eye on my project updates
